#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

RH-2009-10-27-0: Bugfix:     Hedeby:
                             o bug in create_max_pending_jobs_slo fixed (job filters
                               did not work)
                             o bug in hedeby issue 566, setup SLO for spare_pool with 
                               update interval
                             o cleanup of maxPendingJobs/noMatch test
                 Enhancem.:  get_resource_info(_opt) allows filtering
                 Belongs to: RH-2009-10-26-0
                 Review:     TB

CR-2009-10-27-0: Cleanup:    enhanced timeout allowed for deleting temporary 
                             generated files

CR-2009-10-26-0: Bugfix:     fixed drmaaj test
                 Review:     DG

RH-2009-10-26-0: Enhancem:   Hedeby: o New use case test cloud_preheat
                                     o Opt methods for create_..._slo
                 Enhancem:   New method submit_sleeper_job in sge_procedures.tcl
                 Review:     TB

MG-2009-10-26-0: Bugfix:     Now its possible to build cloud adapter with SDM ts
                 Review:     RH

CR-2009-10-26-0: Bugfix:     o fixed host aliases test
                 Review:     LP

TB-2009-10-23-0: Enhancem.:  o added SDM test for RFE issue 687:
                               resources/purge/check.62.exp
                             o added SDM test for move resource from serviceA
                               to serviceA:
                               resources/move/same_service/check.62.exp
                             o new SDM cloud helper function