@@ -7,6 +7,10 @@
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
 
+CR-2009-10-27-1: Enhancem.:  Added first prototype for Slotwise Suspend on 
+                             Subordinate test
+                 Review:     DG
+
 RH-2009-10-27-0: Bugfix:     Hedeby:
                              o bug in create_max_pending_jobs_slo fixed (job filters
                                did not work)
